# libAES67

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  diff.txt  libAES67.c  libAES67.h
.github/ISSUE_TEMPLATE/: bug.yaml  compilance.yaml  proposal.yaml
LICENSES/: LICENSE-GPL
include/libAES67/: __posix_tz.h  __tai.h  endian.h  platform.h  time.h
man/man3/: la_time.3
src/: time.c
tests/: CMakeLists.txt  test_time.c
